--- a/style.css
+++ b/style.css
@@ -160,14 +160,6 @@ h2 {
     transform: translateY(0px); }
   to {
     transform: translateY(-2000px); } }
-.opl {
-  position: relative;
-  top: 20px;
-  left: 0px;
-  z-index: 99999;
-  transition: 0.3s opacity ease; }
-  .opl:hover {
-    opacity: 0.8; }
 
 .container-info {
   display: inline-block;
@@ -375,7 +367,7 @@ h2 {
       .main__container-resume {
         margin-bottom: 80px; } }
 .main__tag {
-  color: #1560FB; }
+  color: #4C6493; }
   @media (min-width: 1024px) {
     .main__tag {
       clear: both;
