--- a/style.css
+++ b/style.css
@@ -448,7 +448,8 @@ h2 {
       .main__experience:first-of-type {
         margin-top: 3px; } }
   .main__experience-year {
-    float: right;
+<!--    float: right; -->
+    display: block;
     font-weight: 700;
     line-height: 26px; }
   .main__experience-info {
