--- a/style.css
+++ b/style.css
@@ -203,16 +203,15 @@ h2 {
 .info-main {
   opacity: 0;
   width: 100%;
-  animation: fadeIn ease-in 1;
-  animation-fill-mode: forwards;
-  animation-duration: 0.3s;
-  animation-delay: 0.3s; }
+  }
+
   @media (min-width: 768px) {
     .info-main {
       margin: 0;
       position: relative;
       top: 50%;
-      transform: translateY(-60%); } }
+      
+    } }
 .info__headshot, .info__headshot-img {
   display: block;
   margin-left: auto;
