--- a/style.css
+++ b/style.css
@@ -210,7 +210,7 @@ h2 {
       margin: 0;
       position: relative;
       top: 50%;
-      
+      transform: translateY(-60%); 
     } }
 .info__headshot, .info__headshot-img {
   display: block;
