--- a/style.css
+++ b/style.css
@@ -203,7 +203,10 @@ h2 {
 .info-main {
   opacity: 0;
   width: 100%;
-  }
+  animation: fadeIn ease-in 1;
+  animation-fill-mode: forwards;
+  animation-duration: 0.3s;
+  animation-delay: 0.3s;}
 
   @media (min-width: 768px) {
     .info-main {
