--- a/style.css
+++ b/style.css
@@ -1,23 +1,23 @@
 @charset "UTF-8";
 /* Ultra Light */
 @font-face {
-  font-family: "San Francisco";
+  font-family: "Arial";
   font-weight: 100;
   src: url("https://applesocial.s3.amazonaws.com/assets/styles/fonts/sanfrancisco/sanfranciscodisplay-ultralight-webfont.woff"); }
 /* Regular */
 @font-face {
-  font-family: "San Francisco";
+  font-family: "Arial";
   font-weight: 400;
   src: url("https://applesocial.s3.amazonaws.com/assets/styles/fonts/sanfrancisco/sanfranciscodisplay-regular-webfont.woff"); }
 /* Bold */
 @font-face {
-  font-family: "San Francisco";
+  font-family: "Arial";
   font-weight: 700;
   src: url("https://applesocial.s3.amazonaws.com/assets/styles/fonts/sanfrancisco/sanfranciscodisplay-bold-webfont.woff"); }
 html, body {
   margin: 0;
   padding: 0;
-  font-family: "San Francisco", "Helvetica Neue", sans-serif;
+  font-family: "Arial", "Helvetica Neue", sans-serif;
   font-size: 15px; }
 
 @media (min-width: 768px) {
