--- a/style.css
+++ b/style.css
@@ -379,7 +379,7 @@ h2 {
   line-height: 26px; }
   @media (min-width: 1024px) {
     .main__copy {
-      float: left;
+      float: right;
       width: 75%;
       max-width: 500px; } }
   .main__copy a {
