--- a/style.css
+++ b/style.css
@@ -379,8 +379,8 @@ h2 {
   line-height: 26px; }
   @media (min-width: 1024px) {
     .main__copy {
-      float: right;
-      width: 65%;
+      float: left;
+      width: 75%;
       max-width: 500px; } }
   .main__copy a {
     padding: 0 4px 2px 4px;
