--- a/style.css
+++ b/style.css
@@ -325,6 +325,7 @@ h2 {
 
 .main__container, .main__container-about, .main__container-projects, .main__container-clients, .main__container-links, .main__container-pubs, .main__container-experience, .main__container-resume {
   clear: both;
+  height: auto;
   display: block;
   margin: 40px 0 0 0;
   overflow: auto; }
