--- a/style.css
+++ b/style.css
@@ -183,7 +183,7 @@ h2 {
       height: 100%;
       width: 45%;
       overflow-y: visible;
-      -webkit-overflow-scrolling: touch;
+/*       -webkit-overflow-scrolling: touch; */
       overflow-x: hidden; } }
 .foo {
   margin-top: 30px;
@@ -328,7 +328,7 @@ h2 {
   height: auto;
   display: block;
   margin: 40px 0 0 0;
-  overflow: auto; }
+  overflow: visible; }
   .main__container-about {
     animation-delay: 0.6s; }
     @media (max-width: 768px) {
